<resources>
    <string name="app_name">Railly</string>
    <string name="view_from">From:</string>
    <string name="view_to">To:</string>
    <string name="text_from"> </string>
    <string name="text_to"> </string>
    <string name="view_time">Time</string>
    <string name="text_hour">17:45</string>
    <string name="text_date">17/12/2016</string>
    <string name="button_search">Search</string>
</resources>