<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.naits.railly.RoutePlannerFragment"
    android:background="#ffffff">

    <!-- TODO: Update blank fragment layout -->


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="#ffffff"
        android:layout_margin="15dp"
        android:minWidth="350dp">
        <TextView
            android:text="@string/view_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFrom"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#00a7f5"
            android:textSize="18sp" />
        <TextView
            android:text="@string/view_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTo"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="#f92a3f"
            android:textSize="18sp" />
        <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/autocomplete_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:ems="10"
            android:layout_marginLeft="10dp"/>
        <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/autocomplete_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:ems="10"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:text="@string/view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTime"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="5"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:id="@+id/editTextTimeHour"
            android:layout_row="2"
            android:layout_column="1"
            android:textAlignment="center"
            android:background="@null"
            android:text="@string/text_hour"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:ems="5"
            android:id="@+id/editTextTimeDate"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/text_date"
            android:background="@null"/>
    </GridLayout>
</FrameLayout>
